# Practice

./: Dockerfile  pyproject.toml  requirements.txt
Backend/: DataBase.sql  __init__.py  config.py  main.py  search.py
Frontend/: bot.py
Frontend/routers/: __init__.py  commands.py  info_cmd.py  search_cmd.py
bot/routers/: __init__.py  info_cmd.py  search_cmd.py
settings/: config.py
src/: __main__.py
src/backend/: search.py
src/bot/: bot.py
src/bot/routers/: commands.py  info_cmd.py  search_cmd.py
