[tool.poetry]
name = "practice-1"
version = "0.1.0"
description = ""
authors = ["arikash117 <ari.kash117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
mysql = "^0.0.3"
sqlalchemy = "^2.0.31"
psycopg = "^3.1.19"
psycopg-binary = "^3.1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
