[tool.poetry]
name = "practice-1"
version = "0.1.0"
description = ""
authors = ["arikash117 <ari.kash117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
mysql = "^0.0.3"
sqlalchemy = "^2.0.31"
psycopg = "^3.1.19"
psycopg-binary = "^3.1.19"
alembic = "^1.13.2"
pydantic-settings = "^2.3.4"
pydantic = "^2.7.4"
pymysql = "^1.1.1"
aiogram = "^3.8.0"
mysql-connector-python = "^9.0.0"
cryptography = "^42.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
